# Algo-tri

./: .gitignore  CMakeLists.txt  README.md  algo_trie.h  commands.bat  commands.sh  def.c  funcLib.c  funcLib.h  main.c  methodTri.c  methodTri.h  sortLib.c  sortLib.h
lib/: cas.c  cas.h  caseLib.c  caseLib.h  dataLib.c  dataLib.h  funcLib.c  funcLib.h  sortLib.c  sortLib.h
